--- a/index.html
+++ b/index.html
@@ -14,43 +14,55 @@
         <h1>My Task Manager  <span class="material-icons md-24">add_task</span></h1>
         <span class="material-icons md-24 arrow-down">keyboard_double_arrow_down</span>
         <div class="add-column">
-            <span>Add A New Task Column</span>
+            <span>+ Add A New Task Column</span>
         </div>
         <div class="add-task">
-            <span>Add A New Task</span>
+            <span>+ Add A New Task</span>
         </div>
         <div class="close">
             <span class="material-icons md-24">keyboard_double_arrow_up</span>
         </div>
         <!-- <span class="material-icons md-24">note_add</span>
         <span class="material-icons md-24">task</span>
-        <span class="material-icons md-24">autorenew</span>
-        <span class="material-icons md-24">add_card</span>
-        
+        <span class="material-icons md-24">add_card</span>        
          -->
     </header>
 
     <main>
         <section>
-            <!-- <div class="task-column">
+            <div class="task-column" id="1">
                 <div class="head">
                     <input type="text" value="Column 1">
                 </div>
                 <div class="body">
                     <div>
-                        <span class="material-icons md-24 left">keyboard_double_arrow_left</span>
-                        <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Error repellendus dolorum omnis distinctio ducimus veritatis delectus, numquam molestiae voluptatibus sit dolorem magnam dolore quae, ad voluptate aspernatur repellat quasi officia?</span>
-                        <span class="material-icons md-24 right">keyboard_double_arrow_right</spann>
-                    </div> <div>
-                        <span class="material-icons md-24 left">keyboard_double_arrow_left</span>
-                        <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Error repellendus dolorum omnis distinctio ducimus veritatis delectus, numquam molestiae voluptatibus sit dolorem magnam dolore quae, ad voluptate aspernatur repellat quasi officia?</span>
-                        <span class="material-icons md-24 right">keyboard_double_arrow_right</spann>
+                        <!-- <div class="description upcoming">
+                            <span class="material-icons md-24 left">keyboard_double_arrow_left</span>
+                            <span class="hover"><span class="material-icons md-12 state-icon">upcoming</span><span class="state-text">upcoming</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Error repellendus dolorum omnis distinctio ducimus veritatis delectus, numquam molestiae voluptatibus sit dolorem magnam dolore quae, ad voluptate aspernatur repellat quasi officia?</span>
+                            <span class="material-icons md-24 right">keyboard_double_arrow_right</span>
+                        </div> -->
+                        <!-- <div class="description ongoing">
+                            <span class="material-icons md-24 left">keyboard_double_arrow_left</span>
+                            <span class="hover"><span class="material-icons md-12 state-icon">autorenew</span><span class="state-text">on going</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Error repellendus dolorum omnis distinctio ducimus veritatis delectus, numquam molestiae voluptatibus sit dolorem magnam dolore quae, ad voluptate aspernatur repellat quasi officia?</span>
+                            <span class="material-icons md-24 right">keyboard_double_arrow_right</span>
+                        </div>  -->
+                        <!-- <div class="description over">
+                            <span class="material-icons md-24 left">keyboard_double_arrow_left</span>
+                            <span class="hover"><span class="material-icons md-12 state-icon">task_alt</span><span class="state-text">over</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Error repellendus dolorum omnis distinctio ducimus veritatis delectus, numquam molestiae voluptatibus sit dolorem magnam dolore quae, ad voluptate aspernatur repellat quasi officia?</span>
+                            <span class="material-icons md-24 right">keyboard_double_arrow_right</span>
+                        </div>  -->
+                        <div class="infos" >
+                            <p><span>On going</span> <span class="material-icons md-24">autorenew</span></p>
+                            <p><span>Date: </span> <span>26/12/2002</span></p>
+                            <p><span>Start-Time: </span><span>13:24</span></p>
+                            <p><span>Ending-Time: </span> <span>13:27</span></p>
+                        </div>
                     </div>
                 </div>
                 <div class="footer">
                     <span class="material-icons md-24 delete">delete</span>
                 </div>
-            </div> -->
+            </div>
         </section>
     </main>
 
@@ -85,7 +97,7 @@
                         <label for="ending-time">Ending Time</label>
                         <input type="time" id="ending-time" class="form-input">
                     </div>
-                    <input type="button" value="Submit" class="submit-btn" disabled id="submit">
+                    <input type="button" value="Submit" class="submit-btn"  id="submit">
                 </form>
             </div>
         </div>
