--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                     <input type="text" value="Column 1">
                 </div>
                 <div class="body">
-                    <div>
+                    <!-- <div> -->
                         <!-- <div class="description upcoming">
-                            <span class="material-icons md-24 left">keyboard_double_arrow_left</span>
+                            <span class="material-icons md-24 left first">keyboard_double_arrow_left</span>
                             <span class="hover"><span class="material-icons md-12 state-icon">upcoming</span><span class="state-text">upcoming</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Error repellendus dolorum omnis distinctio ducimus veritatis delectus, numquam molestiae voluptatibus sit dolorem magnam dolore quae, ad voluptate aspernatur repellat quasi officia?</span>
                             <span class="material-icons md-24 right">keyboard_double_arrow_right</span>
                         </div> -->
@@ -51,13 +51,13 @@
                             <span class="hover"><span class="material-icons md-12 state-icon">task_alt</span><span class="state-text">over</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Error repellendus dolorum omnis distinctio ducimus veritatis delectus, numquam molestiae voluptatibus sit dolorem magnam dolore quae, ad voluptate aspernatur repellat quasi officia?</span>
                             <span class="material-icons md-24 right">keyboard_double_arrow_right</span>
                         </div>  -->
-                        <div class="infos" >
+                        <!-- <div class="infos" >
                             <p><span>On going</span> <span class="material-icons md-24">autorenew</span></p>
                             <p><span>Date: </span> <span>26/12/2002</span></p>
                             <p><span>Start-Time: </span><span>13:24</span></p>
                             <p><span>Ending-Time: </span> <span>13:27</span></p>
-                        </div>
-                    </div>
+                        </div> -->
+                    <!-- </div> -->
                 </div>
                 <div class="footer">
                     <span class="material-icons md-24 delete">delete</span>
@@ -103,6 +103,8 @@
         </div>
     </div>
 
+    <script src="variables.js"></script>
+    <script src="functions.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
