--- a/index.html
+++ b/index.html
@@ -59,10 +59,17 @@
                     <div>
                         <div class="description upcoming">
                             <span class="material-icons md-24 left first">keyboard_double_arrow_left</span>
-                            <span class="hover"><span class="material-icons md-12 state-icon">upcoming</span><span class="state-text">upcoming</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Error repellendus dolorum omnis distinctio ducimus veritatis delectus, numquam molestiae voluptatibus sit dolorem magnam dolore quae, ad voluptate aspernatur repellat quasi officia?</span>
+                            <span class="hover">
+                                <span class="material-icons md-12 state-icon">upcoming</span>
+                                <span class="state-text">upcoming</span>
+                                <span class="description-text"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Error repellendus dolorum omnis distinctio ducimus veritatis delectus, numquam molestiae voluptatibus sit dolorem magnam dolore quae, ad voluptate aspernatur repellat quasi officia?</span>
+                                <span class="material-icons md-24 delete-task">delete</span>
+                                <span class="material-icons restore">restore</span>
+                                <span class="column-id"></span>
+                            </span>
                             <span class="material-icons md-24 right">keyboard_double_arrow_right</span>
-                        </div> 
-                        <div class="description ongoing">
+                        </div>  -->
+                        <!-- <div class="description ongoing">
                             <span class="material-icons md-24 left">keyboard_double_arrow_left</span>
                             <span class="hover"><span class="material-icons md-12 state-icon">autorenew</span><span class="state-text">on going</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Error repellendus dolorum omnis distinctio ducimus veritatis delectus, numquam molestiae voluptatibus sit dolorem magnam dolore quae, ad voluptate aspernatur repellat quasi officia?</span>
                             <span class="material-icons md-24 right">keyboard_double_arrow_right</span>
@@ -71,7 +78,7 @@
                             <span class="material-icons md-24 left">keyboard_double_arrow_left</span>
                             <span class="hover"><span class="material-icons md-12 state-icon">task_alt</span><span class="state-text">over</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Error repellendus dolorum omnis distinctio ducimus veritatis delectus, numquam molestiae voluptatibus sit dolorem magnam dolore quae, ad voluptate aspernatur repellat quasi officia?</span>
                             <span class="material-icons md-24 right">keyboard_double_arrow_right</span>
-                        </div> 
+                        </div>  
                         <div class="infos" >
                             <p><span>On going</span> <span class="material-icons md-24">autorenew</span></p>
                             <p><span>Date: </span> <span>26/12/2002</span></p>
