--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
                     </div>
                     <input type="button" value="Submit" class="submit-btn"  id="submit">
                     <input type="button" value="Edit" class="edit-btn"  id="edit">
+                    <input type="hidden" name="" class="keep-task-id" value="">
                 </form>
             </div>
         </div>
